--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,7 @@ install_requires =
     scipy>=1.9
     packaging
 setup_requires =
-    numpy>=2.0.0rc2
+    numpy>=2.0.0
     scipy>=1.9
     cython>=0.29.20; python_version>='3.10'
     packaging
