Default don't use numpy 2

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,6 +29,8 @@ jobs:
         # matrix size; make sure to test all supported versions in some form.
         python-version: ["3.11"]
         case-name: [defaults]
+        # Version 2 not yet available on conda's default channel
+        condaforge: [1]
         numpy-build: [""]
         numpy-requirement: [""]
         scipy-requirement: [">=1.9"]
@@ -38,51 +40,49 @@ jobs:
         # the lack of a variable is _always_ false-y, and the defaults lack all
         # the special cases.
         include:
-          # Test with the version 2 of numpy comming soon.
-          - case-name: python 3.12
+          - case-name: p312 numpy 2
             os: ubuntu-latest
             python-version: "3.12"
             numpy-build: ">=2.0.0"
+            numpy-requirement: ">=2.0.0"
             pypi: 1
 
-          # Binaries compiled with numpy 2 should be compatible when using
-          # numpy 1.X at runtime.
-          - case-name: build numpy 1.22
+          - case-name: p310 numpy 1.22
             os: ubuntu-latest
             python-version: "3.10"
-            scipy-requirement: ""
-            numpy-requirement: ">=1.22.0,<1.23.0"
             numpy-build: ">=1.22.0,<1.23.0"
+            numpy-requirement: ">=1.22.0,<1.23.0"
+            scipy-requirement: ">=1.10,<1.11"
             semidefinite: 1
             oldcython: 1
             pypi: 1
             pytest-extra-options: "-W ignore:dep_util:DeprecationWarning -W \"ignore:The 'renderer' parameter of do_3d_projection\""
 
+          # Python 3.12 and latest numpy
+          # Use conda-forge to provide Python 3.11 and latest numpy
+          - case-name: p312, numpy fallback
+            os: ubuntu-latest
+            python-version: "3.12"
+            numpy-requirement: ">=1.26,<1.27"
+            scipy-requirement: ">=1.11,<1.12"
+            condaforge: 1
+            # Install mpi4py to test mpi_pmap
+            # Should be enough to include this in one of the runs
+            includempi: 1
+
           # Python 3.10, no mkl, scipy 1.9, numpy 1.23
           # Scipy 1.9 did not support cython 3.0 yet.
           # cython#17234
-          - case-name: no mkl
+          - case-name: p310 no mkl
             os: ubuntu-latest
             python-version: "3.10"
-            scipy-requirement: ">=1.9,<1.10"
             numpy-requirement: ">=1.23,<1.24"
+            scipy-requirement: ">=1.9,<1.10"
             semidefinite: 1
             condaforge: 1
             oldcython: 1
             nomkl: 1
             pytest-extra-options: "-W ignore:dep_util:DeprecationWarning -W \"ignore:The 'renderer' parameter of do_3d_projection\""
-
-          # Python 3.12 and latest numpy
-          # Use conda-forge to provide Python 3.11 and latest numpy
-          - case-name: Python 3.12
-            os: ubuntu-latest
-            python-version: "3.12"
-            scipy-requirement: ">=1.12,<1.13"
-            numpy-requirement: ">=1.26,<1.27"
-            condaforge: 1
-            # Install mpi4py to test mpi_pmap
-            # Should be enough to include this in one of the runs
-            includempi: 1
 
           # Mac
           # Mac has issues with MKL since september 2022.
@@ -91,30 +91,35 @@ jobs:
             # https://github.com/conda-incubator/setup-miniconda/issues/344
             os: macos-12
             python-version: "3.12"
+            numpy-build: ">=2.0.0"
+            numpy-requirement: ">=2.0.0"
             condaforge: 1
             nomkl: 1
 
-          - case-name: macos - numpy 1.25
+          - case-name: macos - numpy fallback
             os: macos-12
             python-version: "3.11"
-            scipy-requirement: ">=1.11,<1.12"
+            numpy-build: ">=2.0.0"
             numpy-requirement: ">=1.25,<1.26"
-            # conda-extra-pkgs: "suitesparse"  # for compiling cvxopt
             condaforge: 1
             nomkl: 1
 
           - case-name: Windows
             os: windows-latest
             python-version: "3.11"
+            numpy-build: ">=2.0.0"
+            numpy-requirement: ">=2.0.0"
+            pypi: 1
 
-          - case-name: Windows - No cython
+          - case-name: Windows - numpy fallback
             os: windows-latest
             python-version: "3.10"
-            scipy-requirement: ">=1.10,<1.11"
+            numpy-build: ">=2.0.0"
             numpy-requirement: ">=1.24,<1.25"
             semidefinite: 1
             oldcython: 1
             nocython: 1
+            condaforge: 1
             pytest-extra-options: "-W ignore:dep_util:DeprecationWarning -W \"ignore:The 'renderer' parameter of do_3d_projection\""
 
     steps:
@@ -176,11 +181,11 @@ jobs:
           fi
 
           if [[ "${{ matrix.pypi }}" ]]; then
-            python -m pip install "numpy${{ matrix.numpy-requirement }}" --pre
+            python -m pip install "numpy${{ matrix.numpy-requirement }}"
           elif [[ -z "${{ matrix.nomkl }}" ]]; then
             conda install "numpy${{ matrix.numpy-requirement }}"
           elif [[ "${{ matrix.os }}" =~ ^windows.*$ ]]; then
-            python -m pip install "numpy${{ matrix.numpy-requirement }}" --pre
+            python -m pip install "numpy${{ matrix.numpy-requirement }}"
           else
             conda install nomkl "numpy${{ matrix.numpy-requirement }}"
           fi
