--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,7 +111,7 @@ jobs:
       CIBW_BUILD: "cp3{10,11,12}-*"
       # Numpy and SciPy do not supply wheels for i686 or win32 for
       # Python 3.10+, so we skip those:
-      CIBW_SKIP: "*-musllinux* cp3{10,11,12}-manylinux_i686 cp3{10,11,12}-win32"
+      CIBW_SKIP: "*-musllinux* *-manylinux_i686 *-win32"
       OVERRIDE_VERSION: ${{ github.event.inputs.override_version }}
 
     steps:
@@ -125,9 +125,9 @@ jobs:
 
       - name: Install cibuildwheel
         run: |
-          # cibuildwheel does the heavy lifting for us. Originally tested on
-          # 2.11.3, but should be fine at least up to any minor new release.
-          python -m pip install 'cibuildwheel==2.11.*'
+          # cibuildwheel does the heavy lifting for us. Tested on
+          # 2.19, but should be fine at least up to any minor new release.
+          python -m pip install 'cibuildwheel==2.19.*'
 
       - name: Build wheels
         shell: bash
@@ -145,15 +145,11 @@ jobs:
 
   deploy:
     name: "Deploy to PyPI if desired"
-
-    # if: ${{ github.event.inputs.confirm_ref != '' && github.event.inputs.confirm_ref != 'test' }}
     needs: [deploy_test, build_sdist, build_wheels]
     runs-on: ubuntu-latest
     env:
       TWINE_USERNAME: __token__
-      # TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
       TWINE_NON_INTERACTIVE: 1
-      # TWINE_REPOSITORY: pypi
 
     steps:
       - name: Download build artifacts to local runner
@@ -167,7 +163,7 @@ jobs:
       - name: Check wheels
         run: |
           ls -R wheels
-          if ! [[ $(ls wheels/*.whl | wc -l) == 12 ]]; then exit 1; fi
+          if ! [[ $(ls wheels/*.whl | wc -l) == 9 ]]; then exit 1; fi
           if ! ls wheels/*.tar.gz 1> /dev/null 2>&1; then exit 1; fi
           if ! ls wheels/*.zip 1> /dev/null 2>&1; then exit 1; fi
 
@@ -190,10 +186,10 @@ jobs:
           # it is either a missing confirmation (so we shouldn't run this job),
           # 'test' or a valid confirmation.  We don't need to retest the value
           #  of the confirmation, beyond checking that one existed.
-          if [ ${{ github.event.inputs.confirm_ref }} == 'test' ]; then
+          if [ '${{ github.event.inputs.confirm_ref }}' == 'test' ]; then
             export TWINE_REPOSITORY=testpypi
             export TWINE_PASSWORD=${{ secrets.TESTPYPI_TOKEN }}
-          elif [ ${{ github.event.inputs.confirm_ref }} != '' ]; then
+          elif [ '${{ github.event.inputs.confirm_ref }}' != '' ]; then
             export TWINE_REPOSITORY=pypi
             export TWINE_PASSWORD=${{ secrets.PYPI_TOKEN }}
           else
@@ -202,68 +198,5 @@ jobs:
             exit 0
           fi
           echo "Deploy to $TWINE_REPOSITORY"
-          echo "python -m pip install "twine""
-          echo "python -m twine upload --verbose wheels/*.whl sdist/*.tar.gz"
-
-
-  deploy_testpypi:
-    name: "Deploy to TestPyPI if desired"
-    if: false # ${{ github.event.inputs.confirm_ref == 'test' }}
-    needs: [deploy_test, build_sdist, build_wheels]
-    runs-on: ubuntu-latest
-    env:
-      TWINE_USERNAME: __token__
-      TWINE_PASSWORD: ${{ secrets.TESTPYPI_TOKEN }}
-      TWINE_NON_INTERACTIVE: 1
-
-    steps:
-      - name: Download build artifacts to local runner
-        uses: actions/download-artifact@v4
-        with:
-          path: wheels
-          merge-multiple: true
-
-      - uses: actions/setup-python@v4
-        name: Install Python
-        with:
-          python-version: '3.10'
-
-      - name: Verify this is not a dev version
-        shell: bash
-        run: |
-          python -m pip install wheels/*-cp310-cp310-manylinux*.whl
-          python -c 'import qutip; print(qutip.__version__); assert "dev" not in qutip.__version__; assert "+" not in qutip.__version__'
-
-      # We built the zipfile for convenience distributing to Windows users on
-      # our end, but PyPI only needs the tarball.
-      - name: Upload sdist and wheels to TestPyPI
-        run: |
-          ls -R wheels
-          if ! [[ $(ls wheels/*.whl | wc -l) == 12 ]]; then exit 1; fi
-          if ! ls wheels/*.tar.gz 1> /dev/null 2>&1; then exit 1; fi
-          if ! ls wheels/*.zip 1> /dev/null 2>&1; then exit 1; fi
-          # python -m pip install "twine"
-          # python -m twine upload --repository testpypi --verbose wheels/*.whl sdist/*.tar.gz
-
-
-  check_wheels_availble:
-    name: "Check built wheels"
-    if: false # ${{ github.event.inputs.confirm_ref == '' }}
-    needs: [deploy_test, build_sdist, build_wheels]
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download build artifacts to local runner
-        uses: actions/download-artifact@v4
-        with:
-          path: wheels
-          merge-multiple: true
-
-      - name: List wheels
-        shell: bash
-        run: |
-          ls -R wheels
-          if ! [[ $(ls wheels/*.whl | wc -l) == 12 ]]; then exit 1; fi
-          if ! ls wheels/*.tar.gz 1> /dev/null 2>&1; then exit 1; fi
-          if ! ls wheels/*.zip 1> /dev/null 2>&1; then exit 1; fi
-          echo "All artifacts available!"
+          python -m pip install "twine"
+          python -m twine upload --verbose wheels/*.whl wheels/*.tar.gz
