--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -19,16 +19,16 @@ matplotlib==3.7.1
 numpy==1.26.4
 numpydoc==1.8.0
 packaging==24.1
-parso==0.8.3
-pexpect==4.8.0
+parso==0.8.4
+pexpect==4.9.0
 pickleshare==0.7.5
 Pillow==10.3.0
-prompt-toolkit==3.0.38
+prompt-toolkit==3.0.47
 ptyprocess==0.7.0
-Pygments==2.17.0
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pytz==2023.3
+Pygments==2.18.0
+pyparsing==3.1.4
+python-dateutil==2.9.0.post02.8.2
+pytz==2024.1
 requests==2.32.0
 scipy==1.14.1
 setuptools==69.0.2
